# hardware-scanner

./: Cargo.toml  LICENSE  README.md  hardware_scanner.py  test_hardware_scanner.py
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui/: index.html  main.js  styles.css
